<project>
    <modelVersion>4.0.0</modelVersion>

	<parent>
		<artifactId>avaje-jsonb-parent</artifactId>
		<groupId>io.avaje</groupId>
		<version>1.10-RC1</version>
	</parent>

	<artifactId>avaje-jsonb-msgpack</artifactId>
    <name>avaje-jsonb-msgpack</name>
    <description>Jsonb adapter that adds support for the MessagePack binary format.</description>

	<properties>
		<java.version>17</java.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-jsonb</artifactId>
			<version>1.10-RC1</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>

				<configuration>
					<release combine.self="override"/>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>java.base/sun.nio.ch=io.avaje.jsonb.msgpack</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>

				<configuration>
					<quiet>true</quiet>
					<verbose>false</verbose>
					<failOnError>false</failOnError>
					<doclint>all,-missing</doclint>

					<additionalOptions>
						<additionalOption>--add-exports</additionalOption>
						<additionalOption>java.base/sun.nio.ch=io.avaje.jsonb.msgpack</additionalOption>
					</additionalOptions>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.4.0</version>

				<executions>
					<execution>
						<id>add-source</id>
						<phase>generate-sources</phase>

						<goals>
							<goal>add-source</goal>
						</goals>

						<configuration>
							<sources>
								<source>${project.basedir}/msgpack-java/msgpack-core/src/main/java</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>